[Fix][E2E] Avoid Doris driver downloads